WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227632
Regression(
r278786
) LocalStorageDatabase's transaction may be remain active when process gets suspended
https://bugs.webkit.org/show_bug.cgi?id=227632
Summary
Regression(r278786) LocalStorageDatabase's transaction may be remain active w...
Chris Dumez
Reported
2021-07-02 11:36:26 PDT
LocalStorageDatabase's transaction may be remain active when process gets suspended. LocalStorageDatabase commits its transaction after 500ms. However, when PrepareToSuspend gets called, we suspend/hang the storage thread and the task to commit the transaction cannot get committed.
Attachments
Patch
(3.85 KB, patch)
2021-07-02 11:44 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-07-02 11:44:37 PDT
Created
attachment 432808
[details]
Patch
Geoffrey Garen
Comment 2
2021-07-02 13:10:17 PDT
Comment on
attachment 432808
[details]
Patch r=me
EWS
Comment 3
2021-07-02 13:23:06 PDT
Committed
r279512
(
239364@main
): <
https://commits.webkit.org/239364@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 432808
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-07-02 13:24:16 PDT
<
rdar://problem/80099966
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug